[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.urls]
"PyPI" = "https://pypi.org/project/alembic-utils/"
"GitHub" = "https://github.com/olirice/alembic_utils"

[tool.poetry.group.dev.dependencies]
black = "*"
pylint = "*"
pre-commit = "*"
mypy = "*"
psycopg2-binary = "*"
pytest = "*"
pytest-cov = "*"
mkdocs = "*"

[tool.poetry.group.nvim.dependencies]
neovim = "*"
python-language-server = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
pygments = "*"
pymdown-extensions = "*"
mkautodoc = "*"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.black]
line-length = 100
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
known_third_party = ["alembic", "flupy", "parse", "pytest", "setuptools", "sqlalchemy"]

[tool.mypy]
follow_imports = "skip"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true
# disallow_untyped_defs = true
